fix(chat): word wrap fix
closes #257

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -18,7 +18,7 @@ page-chat {
   }
 
   .chat-message {
-    word-break: break-all;
+    word-break: break-word;
   }
 
   .virtual-list {
